[package]
name = "hello_osm"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "tracing"] }
bytemuck = { version = "1.21.0", features = ["derive"] }
cfg-if = "1.0.0"
env_logger = "0.11.6"
error-chain = "0.12.4"
geo = { version = "0.29.3", features = ["use-serde"] }
geojson = "0.24.1"
log = "0.4.22"
reqwest = { version = "0.12.12", features = ["json"] }
secrecy = "0.10.3"
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
validator = { version = "0.20.0", features = ["derive"] }
