[package]
name = "hello_osm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web & Async I/O framework
axum = { version = "0.8.1", features = ["macros", "tracing"] }
tokio = { version = "1.43.0", features = ["full"] }
# Calls external APIs
reqwest = { version = "0.12.12", features = ["json"] }
# External APIs all speak this, but we don't send it to our client
geojson = "0.24.1"
# Redacts sensitive data from debug. Also does memory stuff irrelevant to us
secrecy = "0.10.3"
# Deserializes requests and serializes responses
serde = "1.0.217"
serde_json = "1.0.134"
tower-http = { version = "0.6.2", features = ["trace"] }
# Logging but better
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# Makes it easy to add constraints to requests
validator = { version = "0.20.0", features = ["derive"] }
clap = { version = "4.5.29", features = ["derive", "env"] }
